@@ -1,6 +1,0 @@
-PulseAudio Manager (paman) is a simple GTK frontend for the PulseAudio sound
-server.
-
-With the current version of paman you may browse most of PulseAudio's
-internals. There is support for changing volume of sinks and sink outputs.
-You're able to play samples from the sample cache.
