@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 09:59:22 nia Exp $
-
-BLAKE2s (paman-0.9.4.tar.gz) = d210f113ab78839fe2d7d38213d43993177df96248a0477bb7898c65d40d1ecf
-SHA512 (paman-0.9.4.tar.gz) = dc135b3cd14966a86ae22c3fc514c02f5a9fcb8f1eccadc37c52eb620a06edfe3a0f75360fcaa44e57c058812a673aa9d4e22572002c1bf999e40ccfd7350b44
-Size (paman-0.9.4.tar.gz) = 116757 bytes
