@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2543 2024/04/17 14:33:55 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2544 2024/04/17 14:36:36 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4198,3 +4198,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed devel/libsexy [wiz 2024-04-17]
 	Removed devel/libview [wiz 2024-04-17]
 	Removed graphics/gimmage [wiz 2024-04-17]
+	Removed audio/paman [wiz 2024-04-17]
